# ai-hardware-leaderboard

./: .env.example  README.md  justfile  pyproject.toml
src/: get_top_models.py  main.py  results.py
src/backend/: backend_types.py  ollama.jinja2  run_backend.py  tgi.jinja2  vllm.jinja2
src/backend/llama_cpp/: llama_cpp.jinja2
src/backend/tgi/: tgi.jinja2
src/backend/vllm/: vllm.jinja2
src/benchmark/: benchmark_result.py  run_benchmark.py  single_request.py  test_backend_working.py
src/benchmark/inference-benchmarker/: meta-llama_Llama-3_1-8B-Instruct_2025-02-03-13-33-55-tgi.json  schema.py  template.jinja2
src/dataset/: leaderboard_dataset.py
src/hardware/: hardware_cli.py  hardware_detector.py  hardware_info.py  hardware_info.yaml
src/model/: get_models.py  model.yaml  models.yaml  weights.py
tests/: todo.md
