[project]
name = "ai-hardware-leaderboard"
version = "0.1.0"
description = "Huggingface AI Hardware Leaderboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "loguru",
    "jinja2",
    "torch",
    "transformers",
    "huggingface-hub",
    "safetensors",
    "pydantic",
    "requests",
    "datasets",
    "pandas",
    "python-dotenv",
    "openai"
]
[project.scripts]
ai-hardware-leaderboard = "main:app"
